Not make JMeter see all files